--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
-sevices: 
+services:
   app:
-    contsiner_name: docker-node-mongo
+    container_name: docker-node-mongo
     restart: always
     build: .
     ports:
